Bug 117287 - FILESAVE XLSX: Comments always disappear after opening the exported XLSX file with Excel
Summary: FILESAVE XLSX: Comments always disappear after opening the exported XLSX file...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Shapes XLSX
  Show dependency treegraph
 
Reported: 2018-04-27 12:59 UTC by Gabor Kelemen (Collabora)
Modified: 2021-09-20 14:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel 2010 (17.45 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2018-04-27 12:59 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the example file in Excel (82.20 KB, image/png)
2018-04-27 12:59 UTC, Gabor Kelemen (Collabora)
Details
The example file resaved by Calc 6.1 (17.45 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2018-04-27 13:00 UTC, Gabor Kelemen (Collabora)
Details
The example file opened in Calc (88.96 KB, image/png)
2018-04-27 13:01 UTC, Gabor Kelemen (Collabora)
Details
The example file saved by LO6.1 and reopened (88.09 KB, image/png)
2018-04-27 13:02 UTC, Gabor Kelemen (Collabora)
Details
The example file saved by Calc and opened in Excel (106.74 KB, image/png)
2018-04-27 13:33 UTC, Gabor Kelemen (Collabora)
Details
The example file saved by Calc and opened in Excel (92.30 KB, image/png)
2018-04-27 13:35 UTC, Gabor Kelemen (Collabora)
Details
Manually fixed LO-export file (13.36 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2018-04-27 14:25 UTC, Gabor Kelemen (Collabora)
Details
Screenshot from current LO 6.2 (60.68 KB, image/png)
2018-10-11 12:41 UTC, Gabor Kelemen (Collabora)
Details
Original example file saved from LO master (12.46 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2018-10-11 12:42 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-04-27 12:59:10 UTC
Created attachment 141704 [details]
Example file from Excel 2010

If we export an *.xlsx file, which contains a comment, with LibreOffice Calc and open with Microsoft Excel 2010/2013/2016 the comment will be hidden after we click on the commented cell.

Steps to reproduce:
1. Create a new XLSX file in Microsoft Excel 2010/2013/2016
2. Add a comment to a cell.
3. Set the comments visibility to “Show all comments”
4. Save the file as *.xlsx.
5. Open the file with LibreOffice Calc and save as *.xlsx
6. Open the file with Microsoft Excel and click on the commented cell. (the comment will disappear)


Actual results:
After we open the exported file with Microsoft Excel and click on the commented cell the comment will be hidden. Despite we set the comments visibility setting to “Show all comments”.
The problem may be related to the “vmlDrawing1”.vml file, because after the LibreOffice Calc export the <x:Visible/> tag disappeared from the “vmlDrawing1.vml” file.
If we reopen the ORIGINAL file with Microsoft Excel, the comment will not disappear if we click on the commented cell.

Expected results:
The comments should not be hidden after we reopen the exported *.xlsx file with Microsoft Excel.


Version: 6.1.0.0.alpha0+
Build ID: aa45e2745f14c5626fe163939dc7d101efe9d1cd
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-04-25_00:27:22
Locale: hu-HU (hu_HU); Calc: group
Comment 1 Gabor Kelemen (Collabora) 2018-04-27 12:59:53 UTC
Created attachment 141705 [details]
Screenshot of the example file in Excel
Comment 2 Gabor Kelemen (Collabora) 2018-04-27 13:00:28 UTC
Created attachment 141706 [details]
The example file resaved by Calc 6.1
Comment 3 Gabor Kelemen (Collabora) 2018-04-27 13:01:24 UTC
Created attachment 141707 [details]
The example file opened in Calc
Comment 4 Gabor Kelemen (Collabora) 2018-04-27 13:02:55 UTC
Created attachment 141708 [details]
The example file saved by LO6.1 and reopened
Comment 5 Gabor Kelemen (Collabora) 2018-04-27 13:33:44 UTC
Created attachment 141709 [details]
The example file saved by Calc and opened in Excel
Comment 6 Gabor Kelemen (Collabora) 2018-04-27 13:35:22 UTC
Created attachment 141711 [details]
The example file saved by Calc and opened in Excel

After clicking on the cell, the comment disappears
Comment 7 Gabor Kelemen (Collabora) 2018-04-27 14:25:50 UTC
Created attachment 141714 [details]
Manually fixed LO-export file

Manually extracting attachment #141706 [details] and adding <x:Visible/> into xl/drawings/vmlDrawing1.vml fixes the problem.
Comment 8 raal 2018-04-28 15:37:47 UTC
I can confirm withVersion: 6.1.0.0.alpha0+
Build ID: 930a3cbaeeaf6bca594f8651c4d5dffc1e5391d4
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 
and LO 4.1
Comment 9 Commit Notification 2018-09-05 08:40:27 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7010edf9c3cd1a602417421980092dee9ce7ea94

tdf#117287 When saving as Xlsx, export visible flag if comment is visble

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2018-10-11 11:58:55 UTC
A polite ping to Ilhan Yesil:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
Otherwise, Could you please explain what's missing?
Thanks
Comment 11 Gabor Kelemen (Collabora) 2018-10-11 12:41:20 UTC
Created attachment 145606 [details]
Screenshot from current LO 6.2

Verified with current bibisect-win32-6.2 :

Version: 6.2.0.0.alpha0+
Build ID: 425af6845ebe066c950b0b63f50563e067485f3e
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); Calc: CL

Seems to work fine, thanks!
Comment 12 Gabor Kelemen (Collabora) 2018-10-11 12:42:37 UTC
Created attachment 145607 [details]
Original example file saved from LO master
Comment 13 Xisco Faulí 2018-10-11 13:40:32 UTC
(In reply to Gabor Kelemen from comment #11)
> Created attachment 145606 [details]
> Screenshot from current LO 6.2
> 
> Verified with current bibisect-win32-6.2 :
> 
> Version: 6.2.0.0.alpha0+
> Build ID: 425af6845ebe066c950b0b63f50563e067485f3e
> CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
> Locale: hu-HU (hu_HU); Calc: CL
> 
> Seems to work fine, thanks!

Let's put it to VERIFIED FIXED then...