tdf#117287 When saving as Xlsx, export visible flag if comment is visble

The visible flag will be exported now, when a comment is visible and
the file is saved as Xlsx.

Change-Id: Id05ab5f94ea85f48db123d1043ecdc4813a64382
Reviewed-on: https://gerrit.libreoffice.org/59934
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>